python_datacompass/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datacompass-python
  labels:
    name: datacompass-python
    app: datacompass
    version: python
